ingress-multiple-vhost/example-app.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  namespace: example
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  namespace: example
spec:
  selector:
    matchLabels:
      app: example
  replicas: 1
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - name: example
        image: hashicorp/http-echo
        args:
        - "-text= example service"
        ports:
        - containerPort: 5678
