ingress-multiple-vhost/test-app.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: test
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: hashicorp/http-echo
        args:
        - "-text= test service"
        ports:
        - containerPort: 5678
