ingress-multiple-vhost/test-ingress-rule.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-svc-rule
  namespace: test
spec:
  rules:
  - host: <domain name to access test service ex. test.com>
    http:
      paths:
      - path: /
        backend:
          serviceName: test-svc
          servicePort: 80
